<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E0707"
    tools:context=".gamepage">

    <ImageButton
        android:id="@+id/imageButton19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton13"
        app:layout_constraintEnd_toStartOf="@+id/imageButton18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton9"
        app:layout_constraintEnd_toStartOf="@+id/imageButton15"
        app:layout_constraintStart_toEndOf="@+id/imageButton19"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/_3"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton16"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_4"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintEnd_toStartOf="@+id/imageButton11"
        app:layout_constraintStart_toEndOf="@+id/imageButton18"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_5"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton17"
        app:layout_constraintEnd_toStartOf="@+id/imageButton10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_6"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton15"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_7"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton15"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_8"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton14"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_9"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_10"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/_11"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_12"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton16"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton19"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/_13"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton14"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/_14"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton14"
        app:layout_constraintStart_toEndOf="@+id/imageButton17"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_15"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintStart_toEndOf="@+id/imageButton16"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        app:srcCompat="@drawable/kartarkasi" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/_16"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton10"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintStart_toEndOf="@+id/imageButton13"
        app:layout_constraintTop_toBottomOf="@+id/imageButton18"
        app:srcCompat="@drawable/kartarkasi" />

    <TextView
        android:id="@+id/ikinciseviye"
        android:layout_width="99dp"
        android:layout_height="22dp"
        android:layout_marginStart="38dp"
        android:background="#4CAF50"
        android:text="İKİNCİ SEVİYE"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="29dp" />

    <Button
        android:id="@+id/cikisbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="15dp"
        android:text="BİTİR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/seskapamabutton"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="KAPAT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/muzikac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="ÇAL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seskapamabutton" />

    <TextView
        android:id="@+id/textView4sure"
        android:layout_width="89dp"
        android:layout_height="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="89dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>